fix(tooltip): extra rule for text wrapping

--- a/packages/core/src/components/tooltip/tooltip.scss
+++ b/packages/core/src/components/tooltip/tooltip.scss
@@ -15,6 +15,7 @@
   border-radius: 4px;
   padding: 8px;
   word-wrap: break-word;
+  white-space: normal;
   max-width: 192px;
   z-index: tds-z-index(tooltip);
   opacity: 0;
